# yysocr

./: main.py  pyproject.toml  question_and_anwser.py  readme.md  run.bat
questions/: q1.json  q2.json
