[tool.poetry]
name = "yysocr"
version = "0.1.0"
description = "痒痒鼠答题小助手"
authors = ["Taokyla <seeyouking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
easyocr = "^1.5.0"
pywin32 = "^304"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true